# code-assistant

./: .env  README.md  main.py  pyproject.toml  requirements.txt
src/chat/: chat.py  input.py
src/tools/: edit_file.py  inspect_code_file.py  inspect_code_file_structure.py  save_file.py
tests/: try_rich.py
